Fixed bug 141671 : Clicking a link does not scroll to the top of the page in search plugin

BUG: 141671


svn path=/trunk/extragear/network/ktorrent/; revision=633675